--- a/visualizer1.html
+++ b/visualizer1.html
@@ -529,7 +529,7 @@
 			var bsic = $(this).find("td:nth-child(2)").html();
 			var ta = $(this).find("td:nth-child(3)").html();
 			var index = $(this).find("td:nth-child(4)").html();
-			var url = "http://10.168.86.133:8000/visualizer3.html?arfcn="+arfcn+"&bsic="+bsic+"&ta="+ta+"&index="+index+"";
+			var url = "http://localhost:8000/visualizer3.html?arfcn="+arfcn+"&bsic="+bsic+"&ta="+ta+"&index="+index+""; //localhost
 			window.open(url, '_blank');
 			
 		});
